# buildingSoftwareTemplate

./: pyproject.toml
