[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assignmentTemplate"
authors = [
    {name = "Ka Ho", email = ""},
]
description = "Assignment Template"
version = "0.1.0"
dependencies = ["matplotlib", "numpy"]
requires-python = ">=3.10.0"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
